welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:16: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^